# Auto-Red-Eye-Remover

./: AutoRedEyeRemoverApp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.sh  main  main.cpp  utils.cpp  utils.h
lib/: CMakeLists.txt
lib/src/: utils.cpp  utils.h
main/: CMakeLists.txt  main.cpp
