cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( main )
find_package( OpenCV REQUIRED )
include_directories( /usr/local/include/opencv4/ /usr/include/boost/ )
add_executable( main main.cpp )
target_link_libraries( main /usr/local/lib -lopencv_core -lopencv_imgcodecs -lopencv_highgui -lopencv_objdetect -lopencv_imgproc -lboost_system -lboost_filesystem )